Command line interface

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "closure-coverage-merger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Coverage merger for the Google Closure Compiler. Merges multiple coverage objects stored in JSON files and outputs them as a single JSON or LCOV report.",
-  "main": "closure-coverage-merger.js",
+  "preferGlobal": true,
+  "bin": {
+    "closure-coverage-merger": "bin/closure-coverage-merger.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +15,7 @@
     "argparse": "^1.0.10"
   },
   "repository": {
-  "type": "git",
-  "url": "git://github.com/dpagano/closure-coverage-merger.git"
+    "type": "git",
+    "url": "git://github.com/dpagano/closure-coverage-merger.git"
   }
 }
