--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Dennis Pagano",
   "license": "Apache-2.0",
   "dependencies": {
-    "argparse": "^1.0.10"
+    "argparse": "^1.0.10",
+    "glob": "^7.1.2"
   },
   "repository": {
     "type": "git",
