--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Coverage merger for the Google Closure Compiler. Merges multiple coverage objects stored in JSON files and outputs them as a single JSON or LCOV report.",
   "preferGlobal": true,
   "bin": {
-    "closure-coverage-merger": "bin/closure-coverage-merger.js"
+    "closure-coverage-merger": "lib/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": " ./node_modules/mocha/bin/mocha --ui tdd --recursive"
   },
   "author": "Dennis Pagano",
   "license": "Apache-2.0",
@@ -18,5 +18,10 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/dpagano/closure-coverage-merger.git"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1",
+    "rewire": "^3.0.2"
   }
 }
