--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.0.1",
-    "rewire": "^3.0.2"
+    "mocha": "^5.0.1"
   }
 }
